--- a/style.css
+++ b/style.css
@@ -9,8 +9,12 @@
     background-color: white;
 }
 
+.navbar-toggler:focus {
+    outline: none; 
+    box-shadow: none; 
+}
+
 .navbar-nav .nav-link {
-    color: dark; 
     font-size: 20px; 
 }
 
@@ -26,9 +30,6 @@ ul li a {
     color: pink;
 }
 
-.text-img {
-    font-size: 20px;
-}
 
 .content-col {
     text-align: center;
@@ -42,13 +43,6 @@ ul li a {
     margin-bottom: 1rem;
 }
 
-.centered-text {
-    background-image: url(images/flower-4546245_1280.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 70vh;
-    width: 100%;
-}
 
 .btn-send{
     background-color: pink;
@@ -61,4 +55,31 @@ span{
 .phone{
     color: pink !important;
     text-decoration: none !important;
+}
+
+.centered-text {
+    position: relative;
+    background-image: linear-gradient(to bottom, rgba(48, 48, 48, 0.5), rgba(0, 0, 0, 0.5)), url('images/flower-4546245_1280.jpg');
+    background-position: center;
+    background-size: cover;
+    height: 70vh;
+    width: 100%;
+    flex-direction: column;   
+    text-align: center;
+}
+
+.card-custom {
+    background-color: pink;
+    color: white;
+    font-size: 22px;
+}
+
+.card-header-custom {
+    background-color: pink;
+    color: white;
+    text-align: center;
+}
+
+.spanCard{
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Add text shadow for emphasis */
 }
