--- a/style.css
+++ b/style.css
@@ -69,17 +69,15 @@ span{
 }
 
 .card-custom {
-    background-color: pink;
-    color: white;
+    color: black;
     font-size: 22px;
 }
 
 .card-header-custom {
-    background-color: pink;
-    color: white;
+    color: black;
     text-align: center;
 }
 
 .spanCard{
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Add text shadow for emphasis */
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
